# gamac

cli/: Cargo.toml
cli/src/: errors.rs  lib.rs  main.rs
cli/src/command/: delete.rs  install.rs  mod.rs  select_system.rs  software_list.rs  system_list.rs  update.rs
cli/src/operation/: delete_script.rs  install_script.rs  mod.rs  select_system.rs  software_list.rs  systems_list.rs  update_script.rs
server/: .env  Cargo.toml
server/.sqlx/: query-21206611388a41258326f15966427db3eaa4b3bdb9036bee67cb3aca44ef474d.json  query-607773301f4a2c3051d4a8bc2ef55f13e3d736a6143db32ae25cd9fc19183ee0.json  query-675e0eb8e405a06a7cd62af4eeafecce2832d55564cdeab6a0863b04f365f8ef.json  query-779750ac9c8231313b8694c79334ec93cfb040f3cd8134aa3b693441293010c1.json  query-dfc949f8b544b4fcdd52347da1f1b7d706b87035bf7848ceba3069fe499c9b91.json
server/migrations/: 20231002171652_init.sql  20231003161757_add_init_data.sql
server/src/: configs.rs  errors.rs  lib.rs  main.rs  startup.rs
server/src/routes/: delete_instruction.rs  install_instruction.rs  mod.rs  software_list.rs  system_list.rs  update_instruction.rs
