[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
reqwest = { version = "0.11.20", features = ["json"]}
clap = { version = "4.3.21", features = ["derive", "env"]}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"]}
thiserror = "1.0.48"
dirs = "5.0.1"
uuid = { version = "1.4.1", features = ["serde"]}
url = { version = "2.4.1", features = ["serde"]}
toml = "0.8.0"
